objects/LS_CO__CO_ChatterGroupContent__c.object
<CustomObject>
    <fields>
        <fullName>LS_CO__ContentDoc_Id__c</fullName>
        <label>ContentDocId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LS_CO__ContentId__c</fullName>
        <label>ContentId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LS_CO__FeedItemId__c</fullName>
        <label>FeedItemId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LS_CO__Group_Id__c</fullName>
        <label>Group Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LS_CO__Group_Name__c</fullName>
        <label>Group Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LS_CO__Object_Name__c</fullName>
        <label>Object_Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LS_CO__Object_Prefix__c</fullName>
        <label>Object Prefix</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LS_CO__Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CO_ChatterGroupContent</label>
    <nameField>
        <displayFormat>CG-{0000}</displayFormat>
        <label>CO_ChatterGroupContent Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CO_ChatterGroupContents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>